clean up topic creation/setup + BrokerServer now properly handles IntermediaryRecords